api to addingredients with images
