# pkg/api/types.go
@@ -1,5 +1,7 @@
 package api
 
+import "github.com/muzcategui1106/kitchen-wizard/pkg/db/model"
+
 type HealthzResponse struct {
 	OK bool `json:"ok"`
 }
@@ -8,6 +10,11 @@ type User struct {
 	FirstName string `json:"firstName"`
 	LastName  string `json:"lastName"`
 	Email     string `json:"email"`
+}
+
+type CreateUpdateIngredientRequest struct {
+	Ingredient *model.Ingredient `json:"ingredient"`
+	Image      []byte            `json:"image"`
 }
 
 type IngredientCrudResponse struct {
